--- a/app/home.module.scss
+++ b/app/home.module.scss
@@ -1,5 +1,5 @@
 .mainContainer {
-  background-color: #00224d;
+  background-color: var(--main-bg-color);
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -12,32 +12,32 @@
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     .mainHeading {
-      color: #fff;
-      font-size: 48px;
+      color: var(--main-text-color);
+      font-size: var(--base-6);
       span {
         display: inline-block;
         vertical-align: text-bottom;
       }
     }
     .button {
-      padding: 8px 24px;
+      padding: var(--base) var(--base-3);
       text-align: center;
       text-decoration: none;
       display: inline-block;
-      font-size: 16px;
+      font-size: var(--base-2);
       font-weight: bolder;
       font-family: Arial, Helvetica, sans-serif;
-      margin: 8px 2px;
+      margin: var(--base) 2px;
       transition-duration: 0.4s;
       cursor: pointer;
-      background-color: #e7e7e7;
-      color: #00224d;
-      border: 2px solid #e7e7e7;
-      border-radius: 48px;
-      width: 300px;
+      background-color: var(--main-text-color);
+      color: var(--primary-color);
+      border: 2px solid var(--main-text-color);
+      border-radius: var(--base-6);
+      width: calc(var(--base-4) * 10);
       &:hover {
-        background-color: #F44336;
-        color: #e7e7e7;
+        background-color: var(--event-color);
+        color: var(--main-text-color);
       }
     }
   }
