--- a/app/calendar/calendar.module.scss
+++ b/app/calendar/calendar.module.scss
@@ -12,8 +12,8 @@
   .wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
     width: 100%;
+    height: calc(100% - 100px);
+    background-color: var(--main-bg-color);
   }
 }
