[Update]: Theme variables

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -9,7 +9,8 @@
   --main-text-color: #F8F8F2;
   --event-color: #F44336;
   --accent-color: #A0153E;
-  --highlight-color: #FF79C6;
+  --highlight-color: #727d73;
+  --highlight-color-2: #e16a54;
   --base: 8px;
   --base-2: 16px;
   --base-3: 24px;
