Fix header height to make calculation for below containers to avoid scroll

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,6 +1,7 @@
 .mainContainer {
   width: 100%;
   background-color: var(--main-bg-color);
+  height: 100px;
   .mainHead {
     display: flex;
     flex-direction: row;
