--- a/components/MainCalendar/MainCalendar.module.scss
+++ b/components/MainCalendar/MainCalendar.module.scss
@@ -3,36 +3,10 @@
   margin: var(--base-2);
   background-color: var(--secondary-color);
   border: 2px solid var(--main-text-color);
+  border-radius: 16px;
   .calendar {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     height: 100%;
-    .day {
-      border: 1px solid var(--main-text-color);
-      padding: var(--base);
-      cursor: pointer;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      .event {
-        max-height: 80px;
-        width: 100%;
-        overflow: auto;
-        p {
-          padding: 2px;
-          margin-top: 4px;
-          font-size: 12px;
-          color: var(--main-text-color);
-          background: var(--event-color);
-          text-align: center;
-          border-radius: var(--base);
-          &:hover {
-            background: var(--main-text-color);
-            color: var(--event-color);
-          }
-        }
-      }
-    }
   }
 }
