[Update]: Theme variables and remove unwanted elements

--- a/components/MainCalendar/DayView/DayView.module.scss
+++ b/components/MainCalendar/DayView/DayView.module.scss
@@ -1,5 +1,5 @@
 .day {
-    border: 1px solid var(--main-text-color);
+    border: 1px solid var(--border-color);
     padding: var(--base);
     cursor: pointer;
     display: flex;
