--- a/app/globals.scss
+++ b/app/globals.scss
@@ -3,10 +3,11 @@
 @tailwind utilities;
 
 :root {
-  --main-bg-color: #1E1E2E;
-  --primary-color:  #1E1E2E;
-  --secondary-color: #282A36;
+  --main-bg-color: #1B1B1B;
+  --primary-color:  #1B1B1B;
+  --secondary-color: #131314;
   --main-text-color: #F8F8F2;
+  --border-color: #333537;
   --event-color: #F44336;
   --accent-color: #A0153E;
   --highlight-color: #727d73;
