--- a/components/MainCalendar/MainCalendar.module.scss
+++ b/components/MainCalendar/MainCalendar.module.scss
@@ -2,7 +2,7 @@
   width: calc(100% - 256px);
   margin: var(--base-2);
   background-color: var(--secondary-color);
-  border: 2px solid var(--main-text-color);
+  border: 2px solid var(--border-color);
   border-radius: 16px;
   .calendar {
     display: grid;
