[Update]: Add error color

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -12,6 +12,7 @@
   --accent-color: #A0153E;
   --highlight-color: #727d73;
   --highlight-color-2: #e16a54;
+  --error-color: #FF0000;
   --base: 8px;
   --base-2: 16px;
   --base-3: 24px;
