--- a/components/MainCalendar/MainCalendar.module.scss
+++ b/components/MainCalendar/MainCalendar.module.scss
@@ -3,10 +3,21 @@
   margin: var(--base-2);
   background-color: var(--secondary-color);
   border: 2px solid var(--border-color);
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
   border-radius: 16px;
-  .calendar {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    height: 100%;
+  li {
+    &:nth-child(1) {
+      border-top-left-radius: 12px;
+    }
+    &:nth-child(7) {
+      border-top-right-radius: 12px;
+    }
+    &:nth-child(29) {
+      border-bottom-left-radius: 12px;
+    }
+    &:nth-child(35) {
+      border-bottom-right-radius: 12px;
+    }
   }
 }
