--- a/components/MainCalendar/DayView/DayView.module.scss
+++ b/components/MainCalendar/DayView/DayView.module.scss
@@ -4,29 +4,35 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   color: var(--main-text-color);
-  .highlight {
-    background-color: var(--accent-color);
-    padding: 4px;
-    border-radius: var(--base-2);
-  }
-  .event {
-    max-height: 80px;
+  .innerWrapper {
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    overflow: auto;
-    p {
-      padding: 2px;
-      margin-top: 4px;
-      font-size: 12px;
-      color: var(--main-text-color);
-      background: var(--event-color);
-      text-align: center;
-      border-radius: var(--base);
-      &:hover {
-        background: var(--main-text-color);
-        color: var(--event-color);
+    justify-content: space-between;
+    align-items: center;
+    .highlight {
+      background-color: var(--accent-color);
+      padding: 4px;
+      border-radius: var(--base-2);
+    }
+    .event {
+      max-height: 80px;
+      width: 100%;
+      overflow: auto;
+      p {
+        padding: 2px;
+        margin-top: 4px;
+        font-size: 12px;
+        color: var(--main-text-color);
+        background: var(--event-color);
+        text-align: center;
+        border-radius: var(--base);
+        &:hover {
+          background: var(--main-text-color);
+          color: var(--event-color);
+        }
       }
     }
   }
