--- a/components/SideBar/SideBar.module.scss
+++ b/components/SideBar/SideBar.module.scss
@@ -28,6 +28,9 @@
         border-bottom: 2px var(--border-color) solid;
         font-size: var(--base-2);
         padding: var(--base);
+        word-wrap: break-word;
+        white-space: pre-wrap;
+        word-break: break-word;
         span {
           color: var(--highlight-color);
         }
@@ -41,10 +44,23 @@
         color: var(--main-text-color);
         font-size: var(--base-2);
         padding: var(--base);
+        word-wrap: break-word;
+        white-space: pre-wrap;
+        word-break: break-word;
         span {
           color: var(--highlight-color);
         }
       }
     }
+  }
+
+  .noEvent{
+    font-size: 16px;
+    color: var(--main-text-color);
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
   }
 }
