--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -14,7 +14,7 @@
     padding: 20px;
     width: 90%;
     max-width: 400px;
-    border-radius: 8px;
+    border-radius: var(--base);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
     text-align: center;
     animation: fadeIn 0.3s ease-in-out;
@@ -27,10 +27,10 @@
     input {
       width: 100%;
       padding: 10px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
+      margin-bottom: var(--base-2);
+      border: 1px solid var(--main-text-color);
       border-radius: 5px;
-      font-size: 16px;
+      font-size: var(--base-2);
       outline: none;
     }
 
@@ -50,11 +50,11 @@
         width: 30%;
         padding: 10px;
         margin-top: 10px;
-        font-size: 16px;
+        font-size: var(--base-2);
         border: none;
         cursor: pointer;
-        border-radius: 8px;
-        margin-left: 8px;
+        border-radius: var(--base);
+        margin-left: var(--base);
         font-weight: bolder;
         color: var(--primary-color);
         &:first-of-type {
