--- a/components/MainCalendar/DayView/DayView.module.scss
+++ b/components/MainCalendar/DayView/DayView.module.scss
@@ -37,3 +37,19 @@
     }
   }
 }
+
+.fadeIn {
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+// Fade-In Animation
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-5px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
