--- a/app/home.module.scss
+++ b/app/home.module.scss
@@ -1,18 +1,14 @@
+@use "./mixins" as *;
+
 .mainContainer {
-  background-color: var(--main-bg-color);
+  background-color: var(--primary-color);
   height: 100vh;
   width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex($align: center, $justify: center);
   .wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
+    @include flex($direction: column, $align: center, $justify: center);
     .mainHeading {
-      color: var(--main-text-color);
+      color: var(--primary-text-color);
       font-size: var(--base-6);
       span {
         display: inline-block;
@@ -26,18 +22,17 @@
       display: inline-block;
       font-size: var(--base-2);
       font-weight: bolder;
-      font-family: Arial, Helvetica, sans-serif;
       margin: var(--base) 2px;
       transition-duration: 0.4s;
       cursor: pointer;
-      background-color: var(--main-text-color);
+      background-color: var(--primary-text-color);
       color: var(--primary-color);
-      border: 2px solid var(--main-text-color);
+      border: 2px solid var(--primary-text-color);
       border-radius: var(--base-6);
       width: calc(var(--base-4) * 10);
       &:hover {
         background-color: var(--event-color);
-        color: var(--main-text-color);
+        color: var(--primary-text-color);
       }
     }
   }
