--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,31 +1,28 @@
+@use "../../app/mixins" as *;
+
 .mainContainer {
   width: 100%;
-  background-color: var(--main-bg-color);
+  background-color: var(--primary-color);
   height: 100px;
   .mainHead {
     display: flex;
     flex-direction: row;
+    @include flex($direction: row);
     justify-content: space-between;
     .left {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: flex-start;
+      @include flex($direction: row, $align: center, $justify: flex-start);
       margin-left: var(--base-3);
       .appNameBadg {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
+        @include flex($direction: row, $align: center);
         padding: 8px;
         .appName {
-          color: var(--main-text-color);
+          color: var(--primary-text-color);
           font-size: var(--base-3);
           font-weight: bolder;
           margin-left: var(--base);
         }
         .nav {
-          display: flex;
-          align-items: center;
+          @include flex($align: center);
           margin-left: 24px;
           .button {
             padding: var(--base) var(--base-3);
@@ -34,44 +31,40 @@
             margin: var(--base) 2px;
             transition-duration: 0.4s;
             cursor: pointer;
-            background-color: var(--main-text-color);
+            background-color: var(--primary-text-color);
             color: var(--primary-color);
-            border: 2px solid var(--main-text-color);
+            border: 2px solid var(--primary-text-color);
             border-radius: var(--base-6);
             &:hover {
               background-color: var(--event-color);
-              color: var(--main-text-color);
+              color: var(--primary-text-color);
             }
           }
           svg {
-            background-color: var(--main-text-color);
+            background-color: var(--primary-text-color);
             border-radius: var(--base-3);
             margin-left: var(--base);
             cursor: pointer;
             &:hover {
               background-color: var(--event-color);
-              color: var(--main-text-color);
+              color: var(--primary-text-color);
             }
           }
         }
       }
     }
     .currDate {
-      display: flex;
-      align-items: center;
+      @include flex($align: center);
       margin: calc(var(--base-2) + 4px);
 
       p {
         font-size: var(--base-3);
         font-weight: bolder;
-        color: var(--accent-color);
+        color: var(--highlight-text-color);
       }
     }
     .right {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: flex-start;
+      @include flex($direction: row, $align: center, $justify: flex-start);
     }
   }
 }
