--- a/components/MainCalendar/DayView/DayView.module.scss
+++ b/components/MainCalendar/DayView/DayView.module.scss
@@ -1,19 +1,16 @@
+@use "../../../app/mixins" as *;
+
 .day {
   border: 1px solid var(--border-color);
   padding: var(--base);
   cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: var(--main-text-color);
+  @include flex($direction: column, $align: center);
+  color: var(--primary-text-color);
   .innerWrapper {
-    display: flex;
-    flex-direction: column;
+    @include flex($direction: column, $align: center, $justify: space-between);
     width: 100%;
-    justify-content: space-between;
-    align-items: center;
     .highlight {
-      background-color: var(--accent-color);
+      background-color: var(--highlight-text-color);
       padding: 4px;
       border-radius: var(--base-2);
     }
@@ -25,12 +22,12 @@
         padding: 2px;
         margin-top: 4px;
         font-size: 12px;
-        color: var(--main-text-color);
+        color: var(--primary-text-color);
         background: var(--event-color);
         text-align: center;
         border-radius: var(--base);
         &:hover {
-          background: var(--main-text-color);
+          background: var(--primary-text-color);
           color: var(--event-color);
         }
       }
