--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -1,3 +1,5 @@
+@use "../../app/mixins" as *;
+
 .modal {
   position: fixed;
   top: 0;
@@ -5,9 +7,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flex($align: center, $justify: center);
   z-index: 1000;
   .modalContent {
     background: var(--secondary-color);
@@ -21,14 +21,14 @@
     h2 {
       margin-bottom: 15px;
       font-size: 20px;
-      color: var(--main-text-color);
+      color: var(--primary-text-color);
     }
 
     input {
       width: 100%;
       padding: 10px;
       margin-bottom: var(--base-2);
-      border: 1px solid var(--main-text-color);
+      border: 1px solid var(--primary-text-color);
       border-radius: 5px;
       font-size: var(--base-2);
       outline: none;
@@ -41,11 +41,7 @@
     }
 
     .btnWrapperCtn {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: flex-end;
-
+      @include flex($direction: row, $align: center, $justify: flex-end);
       button {
         width: 30%;
         padding: 10px;
@@ -58,18 +54,18 @@
         font-weight: bolder;
         color: var(--primary-color);
         &:first-of-type {
-          background-color: var(--main-text-color);
+          background-color: var(--primary-text-color);
           color: var(--primary-color);
         }
 
         &:first-of-type:hover {
           background-color: var(--event-color);
-          color: var(--main-text-color);
+          color: var(--primary-text-color);
         }
 
         &.close {
           background: var(--primary-color);
-          color: var(--main-text-color);
+          color: var(--primary-text-color);
 
           &:hover {
             background: var(--border-color);
