--- a/components/SideBar/SideBar.module.scss
+++ b/components/SideBar/SideBar.module.scss
@@ -1,3 +1,5 @@
+@use "../../app/mixins" as *;
+
 .mainContainer {
   width: 256px;
   .eventCtn {
@@ -16,7 +18,7 @@
       text-align: center;
       font-size: var(--base-2);
       p {
-        color: var(--highlight-color-2);
+        color: var(--secondary-text-color);
         font-weight: bolder;
       }
     }
@@ -24,7 +26,7 @@
       padding: var(--base-2) 0 0px;
       margin: 0 -8px 0;
       p {
-        color: var(--main-text-color);
+        color: var(--primary-text-color);
         border-bottom: 2px var(--border-color) solid;
         font-size: var(--base-2);
         padding: var(--base);
@@ -32,7 +34,7 @@
         white-space: pre-wrap;
         word-break: break-word;
         span {
-          color: var(--highlight-color);
+          color: var(--tertiary-text-color);
         }
       }
     }
@@ -41,26 +43,24 @@
       height: inherit;
       overflow: auto;
       p {
-        color: var(--main-text-color);
+        color: var(--primary-text-color);
         font-size: var(--base-2);
         padding: var(--base);
         word-wrap: break-word;
         white-space: pre-wrap;
         word-break: break-word;
         span {
-          color: var(--highlight-color);
+          color: var(--tertiary-text-color);
         }
       }
     }
   }
 
-  .noEvent{
+  .noEvent {
     font-size: 16px;
-    color: var(--main-text-color);
+    color: var(--primary-text-color);
     text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex($align: center, $justify: center);
     height: 100%;
   }
 }
