--- a/app/mixins.scss
+++ b/app/mixins.scss
@@ -1,3 +1,5 @@
+//mixin for flex properties */
+
 @mixin flex($direction: null, $align: null, $justify: null) {
   display: flex;
   @if $direction != null {
