--- a/app/globals.scss
+++ b/app/globals.scss
@@ -26,6 +26,16 @@
   --event-color: #f44336;
   --error-color: #ff0000;
 
+  //font sizes
+  --font-vs: 4px;
+  --font-base: 8px;
+  --font-base-2: 16px;
+  --font-base-3: 24px;
+  --font-base-4: 32px;
+  --font-base-5: 40px;
+  --font-base-6: 48px;
+
+
   //Sizes for the application
   --vs: 4px;
   --base: 8px;
