--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -3,7 +3,7 @@
 .mainContainer {
   width: 100%;
   background-color: var(--primary-color);
-  height: 100px;
+  max-height: 70px;
   .mainHead {
     display: flex;
     flex-direction: row;
