--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -114,8 +114,8 @@
   }
 }
 
-// Responsive Design
-@media (max-width: 480px) {
+// for phones
+@media (max-width: 576px) {
   .modal-content {
     width: 95%;
   }
